--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.4",
   "description": "git miru kun",
   "main": "index.js",
+  "types": "lib/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ukyo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^8.0.10"
+  }
 }
