--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "ukyo",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^8.0.10"
+    "@types/node": "^8.0.10",
+    "util.promisify": "^1.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "devDependencies": {
+    "ava": "^0.20.0",
+    "typescript": "^2.4.1"
   }
 }
