--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "moduleResolution": "node",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2015"]
+    "lib": ["es2015", "es2016", "es2017", "dom"]
   },
   "include": [
     "lib/**/*"
