Fix typings dir

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.5",
   "description": "tiny commit walker",
   "main": "index.js",
-  "types": "lib/index.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "ava tests --verbose",
     "build": "tsc",
