--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
     "moduleResolution": "node",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2015", "es2016", "es2017", "dom"],
-    "inlineSourceMap": true,
+    "sourceMap": true,
     "declaration": true
   },
   "include": [
