--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch:build": "npm run build -- -w",
     "watch:test": "npm run test -- -w",
     "watch": "run-p watch:*",
-    "prepublish": "run-s build test",
+    "prepublishOnly": "run-s build test",
     "docs:build": "typedoc --out docs --excludeNotExported --excludePrivate --mode file --exclude '**/index.ts'",
     "docs:touch-nojeykll": "nodetouch docs/.nojekyll",
     "docs": "run-s docs:build docs:touch-nojeykll"
