--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-commit-walker",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "tiny commit walker",
   "main": "index.js",
   "typings": "dist/index.d.ts",
@@ -15,6 +15,9 @@
     "docs:touch-nojeykll": "nodetouch docs/.nojekyll",
     "docs": "run-s docs:build docs:touch-nojeykll"
   },
+  "keywords": [
+    "git", "commit"
+  ],
   "author": "Syu Kato",
   "license": "MIT",
   "repository": {
